--- a/store/templates/product_detail.html
+++ b/store/templates/product_detail.html
@@ -22,6 +22,7 @@
    var productapp = new Vue({
         el: '#productapp',
         delimiters: ['[[', ']]'],
+        store: store,
         data () {
             return {
             }
@@ -52,6 +53,7 @@
                 })
                 .then((response) => {
                     console.log(response)
+                    store.commit('increment', 1);
                 })
                 .catch(function (error){
                     console.log('Error 2');
